# powersync-kotlin

PowerSync/: build.gradle.kts
compose/src/jvmMain/kotlin/com/powersync/compose/: DatabaseDriverFactory.compose.android.kt
core/: build.gradle.kts
core/src/jvmMain/cpp/: CMakeLists.txt
core/src/jvmMain/kotlin/: BuildConfig.kt
core/src/jvmMain/kotlin/com/powersync/: DatabaseDriverFactory.jvm.kt  PSJdbcSqliteDriver.kt  extractLib.kt
